testdata/bad/js/type-error/main.ts
const count: string = 1;
console.log(count);
